mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_func_close.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_func_close.mux`
error: Expected '}' after block
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_func_close.mux:2:26
   |
 2 | func foo() returns void {
   |                          ^
